# stereolib

./: CMakeLists.txt  README.md  depth.cpp  main.cpp  main_calib.cpp  main_corres.cpp  main_test.cpp  stereocalib.xml
calib/: stereocalib.cpp  stereocalib.h
corres/: stereomatch.cpp  stereomatch.h
rectify/: stereorect.cpp  stereorect.h
testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  disparity-image.pgm  rgb-image.ppm  stereo  stereorect.cpp
