CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(StereoVisionLibrary)

FIND_PACKAGE(OpenCV 3.0 REQUIRED)
FIND_PACKAGE(PCL 1.2 QUIET)

include_directories(/usr/local/include)

IF(OpenCV_FOUND)
	MESSAGE(STATUS "OpenCV Found")
ELSE()
	MESSAGE(FATAL_ERROR "OpenCV Not FOUND")
ENDIF()

IF(PCL_FOUND)
	MESSAGE(STATUS "PCL Found")
ELSE()
	MESSAGE(STATUS "PCL Not Found")
ENDIF()

SET(SOURCE_CALIB main_calib.cpp ./calib/stereocalib.cpp ./rectify/stereorect.cpp)
SET(SOURCE_TEST main_test.cpp)
SET(SOURCE_MATCH main_corres.cpp ./corres/stereomatch.cpp)

IF(OpenCV_FOUND)
	ADD_EXECUTABLE(stereocalib ${SOURCE_CALIB})
	TARGET_LINK_LIBRARIES(stereocalib ${OpenCV_LIBS})
	ADD_EXECUTABLE(stereotest ${SOURCE_TEST})
	TARGET_LINK_LIBRARIES(stereotest ${OpenCV_LIBS})
ENDIF()

IF(PCL_FOUND)
	INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
	LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
	ADD_DEFINITIONS(${PCL_DEFINITIONS})
	ADD_EXECUTABLE(stereomatch ${SOURCE_MATCH})
	TARGET_LINK_LIBRARIES(stereomatch ${OpenCV_LIBS} ${PCL_LIBRARIES} -lpthread)
ENDIF()
